--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
     "@primeng/themes": "^19.1.3",
+    "angular-remix-icon": "^8.1.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "primeng": "^19.1.3",
