--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-remix-icon": "^8.1.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.4.9",
     "ngx-toastr": "^19.0.0",
     "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
