--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.4.9",
+    "cloudinary-angular": "^1.0.1",
+    "ng2-file-upload": "^8.0.0",
     "ngx-toastr": "^19.0.0",
     "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
