--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.4.9",
     "cloudinary-angular": "^1.0.1",
+    "google-libphonenumber": "^3.2.41",
+    "libphonenumber-js": "^1.12.8",
     "ng2-file-upload": "^8.0.0",
+    "ngx-intl-tel-input": "^17.0.0",
     "ngx-toastr": "^19.0.0",
     "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
