--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
     "@primeng/themes": "^19.1.3",
+    "angular-datatables": "^19.0.0",
     "angular-remix-icon": "^8.1.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.4.9",
     "cloudinary-angular": "^1.0.1",
+    "datatables.net": "^2.0.3",
+    "datatables.net-bs5": "^2.0.3",
     "google-libphonenumber": "^3.2.41",
+    "jquery": "^3.6.0",
     "libphonenumber-js": "^1.12.8",
     "ng2-file-upload": "^8.0.0",
     "ngx-intl-tel-input": "^17.0.0",
@@ -45,6 +49,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@angular/localize": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.9",
     "jasmine-core": "~5.6.0",
     "json-server": "^1.0.0-beta.3",
     "karma": "~6.4.0",
