--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "server": "json-server --watch backend/db.json --port 3000",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "private": true,
   "dependencies": {
@@ -45,8 +46,11 @@
     "@angular/cli": "^19.2.9",
     "@angular/compiler-cli": "^19.2.0",
     "@angular/localize": "^19.2.0",
+    "@eslint/js": "^9.29.0",
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.9",
+    "eslint": "^9.29.0",
+    "globals": "^16.2.0",
     "jasmine-core": "~5.6.0",
     "json-server": "^1.0.0-beta.3",
     "karma": "~6.4.0",
@@ -54,6 +58,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.34.1"
   }
 }
